# simd_benchmark

./: .gitignore  CMakeLists.txt
dot-product/: CMakeLists.txt  dot_asm.h  dot_autovec.h  dot_intrinsics.h  dot_plain.h  main.cpp
vector-addition/: CMakeLists.txt  main.cpp  vecadd_asm.h  vecadd_autovec.h  vecadd_intrinsics.h  vecadd_plain.h
